--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evaluación Final</title>
+    <link rel= "stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <img src="https://c4.wallpaperflare.com/wallpaper/582/58/501/breaking-bad-walter-white-jesse-pinkman-wallpaper-preview.jpg" alt="Breaking Bad junto a los protagonistas">
+    <header class="header">
+        <img class="image" src="./images/Breaking_bad.jpg" alt="Breaking Bad junto a los protagonistas">
     </header>
     <main>
-        <div>
-            <form>
-                <input type="text" name="character">
+        <div class="div">
+            <form class="form js-form">
+                <input class="input js-input" type="text" name="character" placeholder="Introduce el nombre de un personaje">
             </form>
-            <button class="js-button-search" >Buscar</button>
+            <button class="button js-button-search">Buscar</button>
         </div>
         <div>
             <h1>Personajes</h1>
-            <ul class="js-info-character-list">
-                <li>Imagen del personaje</li>
-                <li>Nombre del personaje</li>
-                <li>Vive o muere</li>
+            <ul class="js-character-list">
+                <li>
+                    Cargando...
+                </li>
             </ul>
         </div>
         <div>
-            <h2>Favoritos</h2>
+            <h2 class="js-character-favourites-list">Favoritos</h2>
             <ul>
             </ul>
         </div>
