added card'sstyles and input styles

--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evaluación Final</title>
     <link rel= "stylesheet" href="./css/style.css">
+    <link rel= "stylesheet" href="./reset.css">
 </head>
 <body>
     <header class="header">
         <img class="image" src="./images/Breaking_bad.jpg" alt="Breaking Bad junto a los protagonistas">
     </header>
     <main>
-        <div class="div">
+        <div class="search-container">
             <form class="form js-form">
                 <input class="input js-input" type="text" name="character" placeholder="Introduce el nombre de un personaje">
+                <button class="button js-button-search">Buscar</button>
             </form>
-            <button class="button js-button-search">Buscar</button>
         </div>
-        <div>
-            <h1>Personajes</h1>
-            <ul class="js-character-list">
+        <div class="main-content">
+            <h1 class="main-content-title">Personajes</h1>
+            <ul class="character-container js-character-list">
                 <li>
                     Cargando...
                 </li>
