--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Evaluación Final</title>
     <link rel= "stylesheet" href="./css/style.css">
     <link rel= "stylesheet" href="./reset.css">
+    <link rel="icon" href="./images/face_black.png">
 </head>
 <body>
     <header class="header">
@@ -19,19 +20,21 @@
                 <button class="button js-button-search">Buscar</button>
             </form>
         </div>
-        <div class="main-content">
-            <h1 class="main-content-title">Personajes</h1>
-            <ul class="character-container js-character-list">
-                <li>
-                    Cargando...
-                </li>
-            </ul>
-        </div>
-        <div>
-            <h2 class="js-character-favourites-list">Favoritos</h2>
-            <ul>
-            </ul>
-        </div>
+        <div class="main-container">
+            <div>
+                <h2 class="main-content-title">Favoritos</h2>
+                <ul class="favourites-characters js-character-favourites-list">
+                </ul>
+            </div>
+            <div class="main-content">
+                <h1 class="main-content-title">Personajes</h1>
+                <ul class="character-container js-character-list">
+                    <li>
+                        Cargando...
+                    </li>
+                </ul>
+            </div>
+        </div>  
     </main>
     <script src="./js/main.js"></script>
 </body>
