--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             </form>
         </div>
         <div class="main-container">
-            <div>
+            <div class="main-content-fav">
                 <h2 class="main-content-title">Favoritos</h2>
+                <button class="reset js-button-reset">Borrar favoritos</button>
                 <ul class="favourites-characters js-character-favourites-list">
                 </ul>
             </div>
