add exam button and nickname

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="main-content-fav">
                 <h2 class="main-content-title">Favoritos</h2>
                 <button class="reset js-button-reset">Borrar favoritos</button>
+                <button class="reset js-button-log">LOG</button>
                 <ul class="favourites-characters js-character-favourites-list">
                 </ul>
             </div>
